Add StudentService to StudentController and CourseController